@@ -1,4 +1,4 @@
-.TH VIFM 1 "February 27, 2018" "vifm 0.9.1"
+.TH VIFM 1 "March 6, 2018" "vifm 0.9.1"
 .\" ---------------------------------------------------------------------------
 .SH NAME
 .\" ---------------------------------------------------------------------------
@@ -4036,6 +4036,9 @@ default: "p"
 .br
 Contains a sequence of single-character flags.  Each flag enables shortening
 of some message displayed by vifm in the TUI.  Flags:
+.br
+ - M \- shorten titles in windows of terminal multiplexers created by vifm \
+down to file name instead of using full path.
 .br
  - T \- truncate status-bar messages in the middle if they are too long to fit \
 on the command line.  "..." will appear in the middle.
